Cleanup: Remove unused routes/APIs/controllers

--- a/AzPC.Blazor/AzPC.Blazor.App/Layout/Sidebar.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Layout/Sidebar.razor
@@ -22,6 +22,24 @@
                 <CIcon icon="cil-speedometer" className="nav-icon"/> Dashboard<span class="badge badge-sm bg-info ms-auto">NEW</span>
             </a>
         </li>
+
+		<li class="nav-title">Azure</li>
+		<li class="nav-item">
+            <a class="nav-link" href="@UIGlobals.ROUTE_AZURE_REGIONS">
+				<BIcon icon="bi-globe" extraClassName="nav-icon" /> Regions
+            </a>
+        </li>
+		<li class="nav-item">
+            <a class="nav-link" href="@UIGlobals.ROUTE_AZURE_SKUS">
+				<BIcon icon="bi-box" extraClassName="nav-icon" /> SKUs
+            </a>
+        </li>
+		<li class="nav-item">
+            <a class="nav-link" href="@UIGlobals.ROUTE_AZURE_PRICING">
+				<BIcon icon="bi-cash-coin" extraClassName="nav-icon" /> Pricing
+            </a>
+        </li>
+		@*
         <li class="nav-title">Identity</li>
         <li class="nav-item">
             <a class="nav-link" href="@UIGlobals.ROUTE_IDENTITY_USERS">
@@ -33,14 +51,18 @@
                 <BIcon icon="bi-person-lines-fill" extraClassName="nav-icon" /> Roles
             </a>
         </li>
+		*@
 
+		@*
         <li class="nav-title">Applications</li>
         <li class="nav-item">
             <a class="nav-link" href="@UIGlobals.ROUTE_APPLICATIONS">
                 <CIcon icon="cil-apps" className="nav-icon" /> Applications
             </a>
         </li>
+		*@
 
+		@*
 		<li class="nav-title">Documents</li>
 		<li class="nav-item">
 			<a class="nav-link" target="_blank" href="https://github.com/DDTH/blazor-admin-template">
@@ -62,6 +84,7 @@
 				<CIcon icon="cib-bootstrap" className="nav-icon" /> Bootstrap Icons
 			</a>
 		</li>
+		*@
 
         <!--
         <li class="nav-title">Theme</li>
