--- a/AzPC.Blazor/AzPC.Blazor.App/Layout/MainLayout.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Layout/MainLayout.razor
@@ -13,33 +13,9 @@
             </button>
             <ul class="header-nav d-none d-lg-flex">
                 <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_HOME">Dashboard</a></li>
-				@*
-                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_IDENTITY_USERS">Users</a></li>
-                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_IDENTITY_ROLES">Roles</a></li>
-                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_APPLICATIONS">Applications</a></li>
-				*@
+                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_AZURE_REGIONS">Azure Regions</a></li>
             </ul>
             <ul class="header-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <CIcon icon="cil-bell" className="icon icon-lg" />
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <CIcon icon="cil-list-rich" className="icon icon-lg" />
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <CIcon icon="cil-envelope-open" className="icon icon-lg" />
-                    </a>
-                </li>
-            </ul>
-            <ul class="header-nav">
-                <li class="nav-item py-1">
-                    <div class="vr h-100 mx-2 text-body text-opacity-75"></div>
-                </li>
                 <li class="nav-item dropdown">
                     <button class="btn btn-link nav-link py-2 px-2 d-flex align-items-center" type="button" aria-expanded="false" data-coreui-toggle="dropdown">
                         <CIcon icon="cil-contrast" className="icon icon-lg theme-icon-active" />
@@ -240,7 +216,7 @@
 	{
 		await base.OnInitializedAsync();
 		var respUser = await ApiClient.GetMyInfoAsync(await GetAuthTokenAsync(), ApiBaseUrl);
-		var email = respUser?.Data.Email.Trim().ToLower() ?? string.Empty;
+		var email = respUser.Data.Email.Trim().ToLower() ?? string.Empty;
 		var inputBytes = System.Text.Encoding.UTF8.GetBytes(email);
         GravatarUrl = $"https://www.gravatar.com/avatar/{MD5.ComputeHashString(inputBytes).ToLower()}?s=64&d=identicon";
 
