--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
@@ -42,7 +42,7 @@
 						<div class="row">
 							<div class="col">
 								<select class="form-select form-select-sm" @onchange="@OnServiceFamilyChanged">
-									<option value="" selected="@SelectedServiceFamily.Equals(string.Empty))">-= Service Families =-</option>
+									<option value="" selected="@SelectedServiceFamily.Equals(string.Empty))">-= Service Family =-</option>
 									@if (ServiceFamilyList != null)
 									{
 										@foreach (var item in ServiceFamilyList)
@@ -54,7 +54,7 @@
 							</div>
 							<div class="col">
 								<select class="form-select form-select-sm" @onchange="@OnServiceChanged">
-									<option value="" selected="@SelectedService.Equals(string.Empty)">-= Services =-</option>
+									<option value="" selected="@SelectedService.Equals(string.Empty)">-= Service =-</option>
 									@if (ServiceList != null)
 									{
 										@foreach (var item in ServiceList)
@@ -69,8 +69,8 @@
 							<div class="col">
 								@if (ProductList == null || ProductList.Count() == 0)
 								{
-									<CAlert type="warning">
-										No data.
+									<CAlert type="info">
+										No data, please select a service family/service to view the SKUs.
 									</CAlert>
 								}
 								else
@@ -98,47 +98,6 @@
 							</div>
 						</div>
 					}
-					@*
-                    @if (RegionList != null && !HideUI)
-                    {
-                        <table class="table table-sm table-bordered border-primary table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th scope="col" class="text-center">#</th>
-                                    <th scope="col" class="text-center">Location</th>
-                                    <th scope="col" class="text-center">Name</th>
-									<th scope="col" class="text-center">DisplayName</th>
-									<th scope="col" class="text-center">Type</th>
-									<th scope="col" class="text-center">Paired Region</th>
-                                </tr>
-                            </thead>
-							@if (RegionList.Count() == 0)
-							{
-								<tbody>
-									<tr>
-										<td colspan="7" class="text-center">No data.</td>
-									</tr>
-								</tbody>
-							}
-							else
-							{
-								<tbody>
-									@foreach (var item in RegionList)
-									{
-										<tr>
-											<th scope="row" class="text-center">@(++RegionIndex)</th>
-											<td>@item.GeographyGroup / @item.Geography / @item.PhysicalLocation</td>
-											<td>@item.Name</td>
-											<td>@item.DisplayName</td>
-											<td>@item.RegionType</td>
-											<td>@JsonSerializer.Serialize(item.PairedRegion)</td>
-										</tr>
-									}
-								</tbody>
-							}
-                        </table>
-                    }
-					*@
                 </div>
             </div>
         </div>
