Fix: Azure region list includes only physical regions

--- a/AzPC.Blazor/AzPC.Blazor.App/Layout/MainLayout.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Layout/MainLayout.razor
@@ -14,6 +14,8 @@
             <ul class="header-nav d-none d-lg-flex">
                 <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_HOME">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_AZURE_REGIONS">Azure Regions</a></li>
+                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_AZURE_SKUS">Services & Products</a></li>
+                <li class="nav-item"><a class="nav-link" href="@UIGlobals.ROUTE_AZURE_PRICING">Pricing</a></li>
             </ul>
             <ul class="header-nav ms-auto">
                 <li class="nav-item dropdown">
