Update SKU page

--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
@@ -81,6 +81,7 @@
 												<th scope="col" class="text-center">Product Id</th>
 												<th scope="col" class="text-center">Product Name</th>
 												<th scope="col" class="text-center">SKU Name</th>
+												<th scope="col" class="text-center">Meter Name</th>
 											</tr>
 										</thead>
 										<tbody class="small">
@@ -90,6 +91,7 @@
 													<td>@item.Id</td>
 													<td>@item.Name</td>
 													<td>@item.SkuName</td>
+													<td>@item.MeterName</td>
 												</tr>
 											}
 										</tbody>
