--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Login.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Login.razor
@@ -23,7 +23,7 @@
 <div class="bg-body-tertiary min-vh-100 d-flex flex-row align-items-center">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6">
+            <div class="@(string.IsNullOrEmpty(AppInfo?.LoginPrompt)?"col-lg-6":"col-lg-8")">
                 <div class="card-group d-block d-md-flex row">
                     <div class="card col-md-7 p-4 mb-0">
                         <div class="card-body">
@@ -98,6 +98,16 @@
                             }
                         </div>
                     </div>
+					@if(!string.IsNullOrEmpty(AppInfo?.LoginPrompt))
+					{
+						<div class="card col-md-5 text-white bg-primary py-5">
+							<div class="card-body text-center">
+								<div>
+									<p>@AppInfo.LoginPrompt</p>
+								</div>
+							</div>
+						</div>
+					}
                 </div>
             </div>
         </div>
