--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Login.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Login.razor
@@ -28,7 +28,7 @@
                     <div class="card col-md-7 p-4 mb-0">
                         <div class="card-body">
                             <h1>Login</h1>
-                            <p class="text-body-secondary">Sign in with</p>
+                            <p class="text-body-secondary">Sign in to @AppInfo?.Name using</p>
                             @if (!string.IsNullOrEmpty(AlertMessage))
                             {
                                 <CAlert type="@AlertType">
@@ -111,6 +111,9 @@
                 </div>
             </div>
         </div>
+		<div class="row justify-content-center">
+			@(AppInfo?.Description) - v@(AppInfo?.Version)
+		</div>
     </div>
 </div>
 
