--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Home.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Home.razor
@@ -39,6 +39,12 @@
 					View and compare Azure pricing for products and services across regions.
                 </li>
             </ul>
+			<h5>What's new <span class="badge badge-sm bg-danger ms-auto">NEW</span>:</h5>
+			<ul>
+				<li>
+					View locations of Azure regions on Google Maps.
+				</li>
+			</ul>
         </div>
     </div>
 
