--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Regions.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Regions.razor
@@ -16,6 +16,11 @@
     </li>
 </SectionContent>
 
+@* <HeadContent>
+    <!-- Plugins and styles required by this page-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.24.1/dist/bootstrap-table.min.css">
+</HeadContent> *@
+
 <AuthorizeView>
     <Authorizing>
         <AuthorizingView PageTitle="@($"{PAGE_TITLE} | {AppInfo?.Name} v{AppInfo?.Version} - Authorizing...")" />
@@ -28,7 +33,12 @@
         <div class="container-lg px-4">
             <div class="card border-top-3 mb-4">
                 <div class="card-header">
-                    <h4 class="card-title">@PAGE_TITLE</h4>
+                    <h4 class="card-title">
+						@PAGE_TITLE
+						<button class="btn btn-sm btn-outline-success" onclick="Table2Excel('tblRegions', 'Azure-Regions.xls')">
+							<BIcon icon="file-earmark-spreadsheet" /> Export to Excel
+						</button>
+					</h4>
                 </div>
                 <div class="card-body">
 					<div class="table-responsive">
@@ -40,7 +50,7 @@
 						}
 						@if (RegionList != null && !HideUI)
 						{
-							<table class="table table-sm table-bordered border-primary table-striped table-hover">
+							<table class="table table-sm table-bordered border-primary table-striped table-hover" id="tblRegions">
 								<thead>
 									<tr>
 										<th scope="col" class="text-center">#</th>
@@ -84,6 +94,19 @@
         </div>
     </Authorized>
 </AuthorizeView>
+
+<!-- Plugins and scripts required by this page-->
+<script src="@UIGlobals.ASSET_ROOT/utils.js"></script>
+
+@*
+<script
+  src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+  integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
+  integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.24.1/dist/bootstrap-table.min.js"></script> *@
 
 @code {
     private const string PAGE_TITLE = "Regions";
