Page SKUs: Export table data to Excel

--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Home.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Home.razor
@@ -44,6 +44,9 @@
 				<li>
 					View locations of Azure regions on Google Maps.
 				</li>
+				<li>
+					Export table data to Excel.
+				</li>
 			</ul>
         </div>
     </div>
