--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Skus.razor
@@ -28,7 +28,12 @@
         <div class="container-lg px-4">
             <div class="card border-top-3 mb-4">
                 <div class="card-header">
-                    <h4 class="card-title">@PAGE_TITLE</h4>
+                    <h4 class="card-title">
+						@PAGE_TITLE
+						<button class="btn btn-sm btn-outline-success" onclick="Table2Excel('tblSkus', 'Azure-Services-Products.xls')">
+							<BIcon icon="file-earmark-spreadsheet" /> Export to Excel
+						</button>
+					</h4>
                 </div>
                 <div class="card-body">
 					@if (!string.IsNullOrEmpty(AlertMessage))
@@ -76,7 +81,7 @@
 									}
 									else
 									{
-										<table class="table table-sm table-bordered border-primary table-striped table-hover">
+										<table class="table table-sm table-bordered border-primary table-striped table-hover" id="tblSkus">
 											<thead>
 												<tr>
 													<th scope="col" class="text-center text-nowrap">Product Id</th>
@@ -107,6 +112,9 @@
         </div>
     </Authorized>
 </AuthorizeView>
+
+<!-- Plugins and scripts required by this page-->
+<script src="@UIGlobals.ASSET_ROOT/utils.js"></script>
 
 @code {
     private const string PAGE_TITLE = "SKUs";
