--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Regions.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Regions.razor
@@ -29,7 +29,7 @@
             <div class="card border-top-3 mb-4">
                 <div class="card-header">
                     <h4 class="card-title">
-						@PAGE_TITLE
+						@(PAGE_TITLE)&nbsp;
 						<button class="btn btn-sm btn-outline-success" onclick="Table2Excel('tblRegions', 'Azure-Regions.xls')">
 							<BIcon icon="file-earmark-spreadsheet" /> Export to Excel
 						</button>
