--- a/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Pricing.razor
+++ b/AzPC.Blazor/AzPC.Blazor.App/Pages/Azure/Pricing.razor
@@ -28,7 +28,9 @@
         <div class="container-lg px-4">
             <div class="card border-top-3 mb-4">
                 <div class="card-header">
-                    <h4 class="card-title">@PAGE_TITLE</h4>
+                    <h4 class="card-title">
+						@PAGE_TITLE
+					</h4>
                 </div>
                 <div class="card-body">
 					@if (!string.IsNullOrEmpty(AlertMessage))
@@ -108,7 +110,7 @@
 									}
 									else
 									{
-										<table class="table table-sm table-bordered border-primary table-striped table-hover">
+										<table class="table table-sm table-bordered border-primary table-striped table-hover" id="tblPricing">
 											<thead>
 												<tr>
 													<th scope="col" class="text-center text-nowrap">Product</th>
@@ -152,6 +154,9 @@
         </div>
     </Authorized>
 </AuthorizeView>
+
+<!-- Plugins and scripts required by this page-->
+<script src="@UIGlobals.ASSET_ROOT/utils.js"></script>
 
 @code {
     private const string PAGE_TITLE = "Pricing";
